# Leximini

./: .gitignore  README.md
.github/workflows/: ci.yml
leximini/: Cargo.toml  README.md  pyproject.toml
leximini/src/: lib.rs
